# pynumic

./: .env.template  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pylint.toml  pylint.txt  pyproject.toml  setup.py
.githooks/: pre-commit  pre-commit.py  pre-commit_  prepare-commit-msg  prepare-commit-msg.py
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
examples/: README.md  nn.py  tmp.py
examples/and_train/: README.md  main.py
examples/hopfield/: main.py
examples/json/: main.py
examples/json/config/: perceptron.json
examples/linear/: main.py
examples/perceptron/: main.py
examples/query/: README.md  main.py
examples/test/: b.py  main.py
src/pynumic/: __init__.py  __version__.py  _exceptions.py  _initialization.py  _parameters.py  activation.py  architecture.py  exceptions.py  initialization.py  interface.py  loss.py  nn.py  parameters.py  perceptron.py  propagation.py  properties.py  pynumic.py
src/pynumic/architecture/: architecture.py
src/pynumic/architecture/hopfield/: hopfield.py  properties.py
src/pynumic/architecture/perceptron/: README.md  perceptron.py  propagation.py  properties.py
src/pynumic/architecture/perceptron/interface/: initialize.py  set_props.py  train.py  verify.py
src/pynumic/interface/: __init__.py  initialize.py  interface.py  query.py  train.py  write.py
src/pynumic/properties/: __init__.py  activation.py  bias.py  energy.py  layer.py  layers.py  loss.py  rate.py
src/utils/: benchmark.py  config.py  setup.py  test.py
tests/pynumic/: test_activation.py  test_loss.py  test_propagation.py  test_properties.py  test_pynumic.py
