[tool.poetry]
name = "pynumic"
version = "0.1.19"
description = "Simple neural network library"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://zigenzoog.github.io/pynumic"
repository = "https://github.com/zigenzoog/pynumic"
documentation = "https://zigenzoog.github.io/pynumic/docs"
keywords = [
    "neural",
    "network",
    "machine",
    "learning",
    "library"
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "pynumic", from = "src" }
]
exclude = ["src/**/*.md"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "*"
setuptools = "*"
pre-commit = "*"
pylint = "*"
flake8 = "*"
autopep8 = "*"
black = "*"
bandit = "*"
isort = "*"

[tool.poetry.group.typing.dependencies]
mypy = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
pydocstyle = "*"
docformatter = { extras = ["tomli"], version = "*" }

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]

[tool.mypy]
files = "src/**/*.py"
packages = "src/pynumic"
strict = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true

[tool.pylint]
init-hook = "import sys; sys.path.append('/src/pynumic')"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
