[tool.poetry]
name = "pynumic"
version = "0.1.23"
description = "Simple neural network library"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://zigenzoog.github.io/pynumic"
repository = "https://github.com/zigenzoog/pynumic"
documentation = "https://zigenzoog.github.io/pynumic/docs"
keywords = [
    "neural",
    "network",
    "machine",
    "learning",
    "library"
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "pynumic", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]
exclude = ["src/**/*.md"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
setuptools = "^67.6.1"
pylint = "^2.17.1"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
black = "^23.3.0"
bandit = "^1.7.5"
isort = "^5.12.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.1.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
pydocstyle = "^6.3.0"
docformatter = { extras = ["tomli"], version = "^1.5.1" }

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]

[tool.mypy]
files = "src/**/*.py"
packages = "src/pynumic"
strict = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true

[tool.pylint]
init-hook = "import sys; sys.path.append('/src/pynumic')"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -ra -q --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["*test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
