[tool.poetry]
name = "pynumic"
version = "0.1.25"
description = "Simple neural network library"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://zigenzoog.github.io/pynumic"
repository = "https://github.com/zigenzoog/pynumic"
documentation = "https://zigenzoog.github.io/pynumic/docs"
keywords = [
    "neural",
    "network",
    "machine",
    "learning",
    "library"
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "pynumic", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]
exclude = ["src/**/*.md"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
setuptools = "^68.0.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
black = "^23.7.0"
bandit = "^1.7.5"
isort = "^5.12.0"
matplotlib = "^3.7.2"

[tool.poetry.group.typing.dependencies]
mypy = "^1.4.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
pydocstyle = "^6.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src/**/*.py"]
packages = ["src/pynumic"]
strict = true
namespace_packages = false
explicit_package_bases = false
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[tool.pylint]
init-hook = "import sys; sys.path.append('src/pynumic')"
ignore-paths = ["examples", "tests", "docs"]
ignore-imports = true

[tool.black]
line-length = 99
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -ra -q --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["*test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
